ai/litellm/gen-output/litellm.litellm.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: litellm
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: litellm
    app.kubernetes.io/version: v1.74.4-nightly
    helm.sh/chart: litellm-helm-0.1.730
  name: litellm
  namespace: litellm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: litellm
      app.kubernetes.io/name: litellm
  template:
    metadata:
      annotations:
        checksum/config: 86056e9385c1bb0a0c0fd7ca2a1a6c653a228c575b026146f45168da1b55d746
      labels:
        app.kubernetes.io/instance: litellm
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: litellm
        app.kubernetes.io/version: v1.74.4-nightly
        helm.sh/chart: litellm-helm-0.1.730
    spec:
      containers:
      - args:
        - --config
        - /etc/litellm/config.yaml
        image: ghcr.io/berriai/litellm-database:main-v1.74.4-nightly
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /health/liveliness
            port: http
        name: litellm
        ports:
        - containerPort: 4000
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health/readiness
            port: http
        resources: {}
        securityContext: {}
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /health/readiness
            port: http
          periodSeconds: 10
        volumeMounts:
        - mountPath: /etc/litellm/
          name: litellm-config
      securityContext: {}
      serviceAccountName: default
      volumes:
      - configMap:
          items:
          - key: config.yaml
            path: config.yaml
          name: litellm-config
        name: litellm-config
