ai/litellm/gen-output/litellm-redis-master.litellm.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: master
    app.kubernetes.io/instance: litellm
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: redis
    app.kubernetes.io/version: 8.0.3
    helm.sh/chart: redis-21.2.12
  name: litellm-redis-master
  namespace: litellm
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: tcp-redis
    nodePort: null
    port: 6379
    targetPort: redis
  selector:
    app.kubernetes.io/component: master
    app.kubernetes.io/instance: litellm
    app.kubernetes.io/name: redis
  sessionAffinity: None
  type: ClusterIP
