ai/litellm/gen-output/litellm-redis.litellm.networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: litellm
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: redis
    app.kubernetes.io/version: 7.4.3
    helm.sh/chart: redis-20.13.2
  name: litellm-redis
  namespace: litellm
spec:
  egress:
  - {}
  ingress:
  - ports:
    - port: 6379
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: litellm
      app.kubernetes.io/name: redis
  policyTypes:
  - Ingress
  - Egress
